<resources>
    <string name="app_name">LGU-SV Asset Management System Mobile</string>
    <string name="LGU_AMS">LGU-San Vicente Asset Management System</string>
    <string name="qr_scanner">Asset QR Scanner</string>
    <string name="start_button">LETS GET STARTED</string>
    <string name="scan_asset">SCAN QR CODE</string>
    <string name="scan">Scan Asset</string>
    <string name="result">Result</string>
    <string name="view_button">View Asset Info</string>
    <string name="supervisor">SUPERVISOR</string>
    <string name="employee">EMPLOYEE</string>
    <string name="viewer">VIEWER</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="signupQuestion">Don’t have an account?</string>
    <string name="greet">Welcome Onboard!</string>
    <string name="selectRole">Select your assigned role.</string>
    <string name="next">NEXT</string>
    <string name="confirmReg">Let us confirm your registration.</string>
    <string name="note">NOTE: A manager ID is required to ensure that you are among the working personnel from LGU - San Vicente. The manager ID and password can be acquired through a request addressed to the Admin or Developer. You may change your password once you have logged in to the system.</string>
    <string name="personalInfo">Let us know more about you.</string>

</resources>
