<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <View
        android:id="@+id/borderTop"
        android:layout_width="413dp"
        android:layout_height="41dp"
        android:background="@color/dark_green"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="208dp"
        android:layout_height="185dp"
        android:layout_marginTop="48dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ams_logo"
        app:layout_constraintBottom_toTopOf="@+id/textViewTitle2"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="692dp"
        android:clickable="true"
        android:contentDescription="Back"
        android:onClick="goBack"
        android:padding="2dp"
        android:src="@drawable/baseline_arrow_back_24_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewTitle2"
        android:layout_width="407dp"
        android:layout_height="96dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/LGU_AMS"
        android:textAlignment="center"
        android:textColor="#2D4D2E"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.485" />


    <EditText
        android:id="@+id/ID"
        android:layout_width="258dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittxt_bkg"
        android:fontFamily="@font/poppins"
        android:hint="Enter ID"
        android:textSize="14dp"
        android:inputType="text|numberSigned"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle2"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/password"
        android:layout_width="258dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:background="@drawable/edittxt_bkg"
        android:fontFamily="@font/poppins"
        android:textSize="14dp"
        android:hint="Enter Password"
        android:inputType="textPassword"
        android:padding="2dp"
        app:layout_constraintBottom_toTopOf="@+id/viewerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931" />

    <Button
        android:id="@+id/viewerButton"
        android:layout_width="253dp"
        android:layout_height="66dp"
        android:layout_marginBottom="88dp"
        android:backgroundTint="@color/button_green"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/light_green"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/borderTop"
        app:layout_constraintVertical_bias="0.951" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="69dp"
        android:layout_height="27dp"
        android:layout_marginBottom="76dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textColor="#2D4D2E"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signUp2"
        android:layout_width="184dp"
        android:layout_height="27dp"
        android:layout_marginBottom="76dp"
        android:fontFamily="@font/poppins"
        android:text="@string/signupQuestion"
        android:textAlignment="center"
        android:textColor="#2D4D2E"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>